Update to be more in-line with our project goals in streamlining usability